# micstate

./: .gitignore  CMakeLists.txt  README.md  micstate.c  micstate.cpp  micstate.h
include/: UniversalSpeech.h
lib/: UniversalSpeechStatic.lib
